--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,104 +8,97 @@
     android:backgroundTint="#2196F3"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/personName"
-        android:layout_width="107dp"
-        android:layout_height="23dp"
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="221dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="128dp"
         android:background="#00BCD4"
-        android:cursorVisible="false"
-        android:hint="Name: "
+        android:ems="10"
+        android:hint="@string/result"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_chainStyle="spread"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="81dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />
 
     <EditText
-        android:id="@+id/personAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:id="@+id/et_person_name"
+        android:layout_width="107dp"
+        android:layout_height="23dp"
         android:background="#00BCD4"
-        android:ems="10"
-        android:hint="Age: "
+        android:cursorVisible="false"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personWeight"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="81dp" />
 
     <EditText
-        android:id="@+id/personHeight"
+        android:id="@+id/et_person_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="#00BCD4"
+        android:ems="10"
+        android:hint="@string/age"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_person_weight" />
+
+    <EditText
+        android:id="@+id/et_person_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:background="#00BCD4"
         android:backgroundTint="#00BCD4"
         android:ems="10"
-        android:hint="Height: "
-        android:inputType="textPersonName"
+        android:hint="@string/height"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personName"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/et_person_name" />
 
     <EditText
-        android:id="@+id/personWeight"
+        android:id="@+id/et_person_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="#00BCD4"
         android:ems="10"
-        android:hint="Weight: "
-        android:inputType="textPersonName"
+        android:hint="@string/weight"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personHeight"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/result"
-        android:layout_width="221dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="128dp"
-        android:background="#00BCD4"
-        android:ems="10"
-        android:hint="Result: "
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/et_person_height" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_calculate"
         android:layout_width="130dp"
         android:layout_height="51dp"
         android:layout_marginTop="148dp"
         android:backgroundTint="#00BCD4"
-        android:hint="Calculate"
+        android:hint="@string/calculate"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personAge"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/et_person_age" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
